[添加朋友圈模块]
